[gd_scene load_steps=17 format=3 uid="uid://bs42svyup8efj"]

[ext_resource type="Script" uid="uid://bx5idos2uefop" path="res://Scripts/Autoloads/hud.gd" id="1_t4mso"]
[ext_resource type="Texture2D" uid="uid://dqq7itif4ppjc" path="res://Sprites/UI/Retro Inventory/Scaled 3x/Health_01.png" id="2_2klja"]
[ext_resource type="Texture2D" uid="uid://bylsnnsp2gfv1" path="res://Sprites/UI/Retro Inventory/Scaled 3x/Health_01_Bar01.png" id="3_tqdp4"]
[ext_resource type="FontFile" uid="uid://cuse44lun3f1h" path="res://Fonts/antiquity-print.ttf" id="4_103uw"]
[ext_resource type="Texture2D" uid="uid://clxbapn7kahvn" path="res://Sprites/UI/Retro Inventory/Scaled 3x/Health_03.png" id="6_cg10n"]
[ext_resource type="Texture2D" uid="uid://dbkqptg2mqer8" path="res://Sprites/UI/Retro Inventory/Scaled 3x/Health_03_Bar03.png" id="7_5vdcs"]
[ext_resource type="Texture2D" uid="uid://cmkoocqa8qrpf" path="res://Sprites/UI/Retro Inventory/Scaled 3x/Settings.png" id="8_degq8"]
[ext_resource type="Texture2D" uid="uid://bmrcp378nw6w3" path="res://Sprites/UI/Retro Inventory/Scaled 3x/Settings_Bar02.png" id="9_abx7c"]
[ext_resource type="Texture2D" uid="uid://e8yc776eyrsm" path="res://Sprites/UI/Retro Inventory/Scaled 3x/Inventory_Slot_1.png" id="10_ibaen"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_634ds"]
texture = ExtResource("2_2klja")
texture_margin_left = 48.0
texture_margin_top = 12.0
texture_margin_right = 8.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oudh7"]
texture = ExtResource("3_tqdp4")
texture_margin_left = 48.0
texture_margin_top = 12.0
texture_margin_right = 8.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_706ru"]
texture = ExtResource("6_cg10n")
texture_margin_left = 32.0
texture_margin_top = 20.0
texture_margin_right = 32.0
texture_margin_bottom = 20.0
region_rect = Rect2(0, 0, 192, 48)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sjsgy"]
texture = ExtResource("7_5vdcs")
texture_margin_left = 32.0
texture_margin_top = 20.0
texture_margin_right = 32.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dqucu"]
texture = ExtResource("8_degq8")
texture_margin_left = 48.0
texture_margin_top = 20.0
texture_margin_right = 48.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aoif5"]
texture = ExtResource("9_abx7c")
texture_margin_left = 48.0
texture_margin_top = 20.0
texture_margin_right = 48.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5g8ds"]
texture = ExtResource("10_ibaen")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 8.0
texture_margin_bottom = 8.0
region_rect = Rect2(16, 16, 64, 64)

[node name="HUD_bars" type="Control"]
custom_minimum_size = Vector2(1024, 144)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 144.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("1_t4mso")

[node name="LifeBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(296, 24)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 8.0
offset_right = 144.0
offset_bottom = 56.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxTexture_634ds")
theme_override_styles/fill = SubResource("StyleBoxTexture_oudh7")
value = 50.0
show_percentage = false

[node name="ManaBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(296, 24)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -40.0
offset_right = 144.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxTexture_706ru")
theme_override_styles/fill = SubResource("StyleBoxTexture_sjsgy")
value = 50.0
show_percentage = false

[node name="ExperienceBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 16)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -128.0
offset_right = 420.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxTexture_dqucu")
theme_override_styles/fill = SubResource("StyleBoxTexture_aoif5")
value = 50.0
show_percentage = false

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_right = 28.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5g8ds")

[node name="Level" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.0
offset_top = 16.0
offset_right = 22.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("4_103uw")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center]999"
